--- a/deployment/instances.yml
+++ b/deployment/instances.yml
@@ -38,6 +38,7 @@
         - update apt
 
     - name: Start Mongo
+      become: yes
       service:
           name: mongodb
           state: started
@@ -52,11 +53,13 @@
         - restart nginx
 
     - name: Install the gpg key for nodejs LTS
+      become: yes
       apt_key:
         url: "https://deb.nodesource.com/gpgkey/nodesource.gpg.key"
         state: present
 
     - name: Install the nodejs LTS repos
+      become: yes  
       apt_repository:
         repo: "deb https://deb.nodesource.com/node_{{ node_ver }}.x {{ ansible_distribution_release }} main"
         state: present
