--- a/nginx/hosts.conf
+++ b/nginx/hosts.conf
@@ -1,13 +1,13 @@
-192.168.122.48    config1  #lb
-192.168.122.50    config2
-192.168.122.49    config3
+localhost    config1  #lb
+localhost    config2
+localhost    config3
 
-192.168.122.53    shard1
-192.168.122.51    shard2
-192.168.122.52    shard3
+localhost   shard1
+localhost    shard2
+localhost    shard3
 
-192.168.122.54    smores01
-192.168.122.55    smores02
-192.168.122.56    smores03
-192.168.122.57    smores04
+localhost    smores01
+localhost   smores02
+localhost   smores03
+localhost    smores04
 # 192.168.122.46    smores05
