--- a/deployment/instances.yml
+++ b/deployment/instances.yml
@@ -33,7 +33,7 @@
 
     - name: Install mongo
       become: yes
-      apt: name=mongodb-org state=latest update_cache=yes
+      apt: name=mongodb state=latest update_cache=yes
       notify:
         - update apt
 
@@ -71,12 +71,15 @@
         name: nodejs
         state: present
 
-    - name: Install npm
-      become: yes
-      apt:
-        name: npm
-        update_cache: yes
-        state: latest
+    #get some issues to debug later
+    # - name: Install npm
+    #   become: yes
+    #   tags:
+    #      - debug
+    #   apt:
+    #     name: npm
+    #     update_cache: yes
+    #     state: latest
 
     - name: Install pm2
       become: yes
