--- a/su-search/package.json
+++ b/su-search/package.json
@@ -19,10 +19,10 @@
     "@types/ioredis": "^4.0.10",
     "@types/jsonwebtoken": "^8.3.2",
     "@types/koa": "^2.0.48",
+    "@types/koa__cors": "^2.2.3",
     "@types/koa-bodyparser": "^4.2.2",
     "@types/koa-logger": "^3.1.1",
     "@types/koa-router": "^7.0.40",
-    "@types/koa__cors": "^2.2.3",
     "@types/mongodb": "^3.1.22",
     "@types/node": "^11.11.3",
     "http-status-codes": "^1.3.1",
@@ -42,6 +42,7 @@
     "typescript": "^3.3.3333"
   },
   "dependencies": {
+    "@types/elasticsearch": "^5.0.40",
     "bcryptjs": "^2.4.3",
     "elasticsearch": "^15.4.1",
     "ioredis": "^4.9.0"
