--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,9 +7,11 @@ server {
 
   server_name _;
 
+  set $URL_ENTRY_GITPOD "https://80-spiderpig86-smoresunder-22b6r6zwxl3.ws-eu93.gitpod.io/";  
+
   location / {
     autoindex on;
-    root /home/ubuntu/smores-underflow/su-frontend/build;
+    root  /workspace/SmoresUnderflow/su-frontend/build;
     try_files $uri /index.html;
   }
 
@@ -77,7 +79,7 @@ server {
 
   location /media/ {
    include /etc/nginx/conf.d/media;
-   root /home/ubuntu/smores-underflow;
+   root /workspace/SmoresUnderflow;
    client_max_body_size 10M;
    try_files $uri $uri.jpeg $uri.jpg $uri.png $uri.svg $uri.svgz
     $uri.tif $uri.tiff $uri.wbmp $uri.webp $uri.ico $uri.jng $uri.bmp
