--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -7,7 +7,7 @@ server {
 
   server_name _;
 
-  set $URL_ENTRY_GITPOD "https://80-spiderpig86-smoresunder-22b6r6zwxl3.ws-eu93.gitpod.io/";  
+  #set $URL_ENTRY_GITPOD "https://80-spiderpig86-smoresunder-22b6r6zwxl3.ws-eu93.gitpod.io/";  
 
   location / {
     autoindex on;
@@ -78,7 +78,8 @@ server {
   }
 
   location /media/ {
-   include /etc/nginx/conf.d/media;
+   #Skipped this line to debug later 
+   #include /etc/nginx/conf.d/media;
    root /workspace/SmoresUnderflow;
    client_max_body_size 10M;
    try_files $uri $uri.jpeg $uri.jpg $uri.png $uri.svg $uri.svgz
