--- a/deployment/instances.yml
+++ b/deployment/instances.yml
@@ -31,17 +31,18 @@
         state=present
         create=yes
 
-    - name: Install mongo
-      become: yes
-      apt: name=mongodb state=latest update_cache=yes
-      notify:
-        - update apt
+    ##Mongo Installation Not working after in gitpod
+    # - name: Install mongo
+    #   become: yes
+    #   apt: name=mongodb state=latest update_cache=yes
+    #   notify:
+    #     - update apt
 
-    - name: Start Mongo
-      become: yes
-      service:
-          name: mongodb
-          state: started
+    # - name: Start Mongo
+    #   become: yes
+    #   service:
+    #       name: mongodb
+    #       state: started
 
     - name: Install Postfix
       become: yes
@@ -58,18 +59,19 @@
         url: "https://deb.nodesource.com/gpgkey/nodesource.gpg.key"
         state: present
 
-    - name: Install the nodejs LTS repos
-      become: yes  
-      apt_repository:
-        repo: "deb https://deb.nodesource.com/node_{{ node_ver }}.x {{ ansible_distribution_release }} main"
-        state: present
-        update_cache: yes
+    #To debug later
+    # - name: Install the nodejs LTS repos
+    #   become: yes  
+    #   apt_repository:
+    #     repo: "deb https://deb.nodesource.com/node_{{ node_ver }}.x {{ ansible_distribution_release }} main"
+    #     state: present
+    #     update_cache: yes
 
-    - name: Install the nodejs
-      become: yes
-      apt:
-        name: nodejs
-        state: present
+    # - name: Install the nodejs
+    #   become: yes
+    #   apt:
+    #     name: nodejs
+    #     state: present
 
     #get some issues to debug later
     # - name: Install npm
@@ -81,9 +83,10 @@
     #     update_cache: yes
     #     state: latest
 
-    - name: Install pm2
-      become: yes
-      npm: name=pm2 global=yes production=yes
+    #get some issues to debug later
+    # - name: Install pm2
+    #   become: yes
+    #   npm: name=pm2 global=yes production=yes
 
     - name: Install Erlang
       become: yes
